# PiggyBank

./: AuthController.cpp  AuthController.h  AuthViewController.cpp  AuthViewController.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  WebConnectivityController.cpp  WebConnectivityController.h
.github/workflows/: cmake-single-platform.yml
